--- a/index.html
+++ b/index.html
@@ -6,14 +6,23 @@
     <!-- <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous"> -->
   </head>
   <body>
-    <div class="container">
+    <div class="header">
       <div class="img-class">
         <img src="./photos/alevante.png" alt="">
       </div>
-        <div class="header-logo">
+        <div class="menu-logo">
           <a href="#" id="btn-1">Click me!</a>
         </div>
     </div>
+    <nav class="navigation">
+      <div class="drop-down">
+        <ul>
+          <li>Menu</li>
+          <li>Facebook</li>
+          <li>Contact us</li>
+        </ul>
+      </div>
+    </nav>
     <script src="./index.js"></script>
   </body>
   </html>
