--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
           <a href="#" id="btn-1">Click me!</a>
         </div>
     </div>
-    <nav class="navigation">
+    <nav class="navigation" style="visibility: hidden; opacity: 0">
       <div class="drop-down">
         <ul>
           <li>Menu</li>
