--- a/index.html
+++ b/index.html
@@ -11,13 +11,20 @@
         <img src="./photos/alevante.png" alt="">
       </div>
         <div class="menu-logo">
-          <a href="#" id="btn-1">Click me!</a>
+          <button class="btn-1">
+            <div class="dots">
+              <div id="dot-1">-</div>
+              <div id="dot-2">-</div>
+              <div id="dot-3">-</div>
+            </div>
+          </button>
         </div>
     </div>
     <nav class="navigation" style="visibility: hidden; opacity: 0">
       <div class="drop-down">
         <ul>
-          <li>Menu</li>
+           <li><a href="./menu.html" id="menu-href" target="_blank">Menu</a>
+          </li>
           <li>Facebook</li>
           <li>Contact us</li>
         </ul>
