--- a/index.html
+++ b/index.html
@@ -25,7 +25,9 @@
         <ul>
            <li><a href="./menu.html" id="menu-href" target="_blank">Menu</a>
           </li>
-          <li>Facebook</li>
+          <li>
+            <a href="https://www.facebook.com" id="menu-href" target="_blank">Facebook</a>
+          </li>
           <li>Contact us</li>
         </ul>
       </div>
