--- a/menu.html
+++ b/menu.html
@@ -20,6 +20,7 @@
           <div id="dot-3">-</div>
         </div>
       </button>
+      <p>test</p>
     </div>
   </div>
   <img src="./photos/menu.jpg">
