--- a/menu.html
+++ b/menu.html
@@ -4,7 +4,8 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="./styles/style.css">
+  <link rel="stylesheet" href="./styles/menu.css">
   <title>Document</title>
 </head>
 <body>
@@ -20,9 +21,10 @@
           <div id="dot-3">-</div>
         </div>
       </button>
-      <p>test</p>
     </div>
   </div>
-  <img src="./photos/menu.jpg">
+  <div class="menu-container">
+    <img src="./photos/menu.jpg">
+  </div>
 </body>
 </html>
