Added Fixed position such that menu is stuck while scrolling

--- a/index.html
+++ b/index.html
@@ -20,18 +20,20 @@
           </button>
         </div>
     </div>
-    <nav class="navigation" style="visibility: hidden; opacity: 0">
-      <div class="drop-down">
-        <ul>
-           <li><a href="./menu.html" id="menu-href" target="_blank">Menu</a>
-          </li>
-          <li>
-            <a href="https://www.facebook.com" id="menu-href" target="_blank">Facebook</a>
-          </li>
-          <li>Contact us</li>
-        </ul>
-      </div>
-    </nav>
+    <div class="nav-container">
+      <nav class="navigation" style="visibility: hidden; opacity: 0">
+        <div class="drop-down">
+          <ul>
+             <li><a href="./menu.html" id="menu-href" target="_blank">Menu</a>
+            </li>
+            <li>
+              <a href="https://www.facebook.com" id="menu-href" target="_blank">Facebook</a>
+            </li>
+            <li>Contact us</li>
+          </ul>
+        </div>
+      </nav>
+    </div>
     <script src="./index.js"></script>
   </body>
   </html>
